# OpMon-Archive

./: #README.md#  .clang-format  .clang-tidy  .classpath  .cproject  .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code reorganization.txt  Collaborer.md  Credits.md  Debug.depend  Debug.layout  Doxyfile  Events.drawio  INSTALL.md  LICENSE  LICENSE.md  Makefile  Makefile-Linux  Makefile-Win  OpMon-Linux.cbp  OpMon-Linux.depend  OpMon-Linux.layout  OpMon.cbp  OpMon.depend  OpMon.layout  OpMon.smproj  OpMon_build_log.html  PKGBUILD  Projet-Pokemon-Regimys.cbp  Projet-Pokemon-Regimys.cbp.mak  Projet-Pokemon-Regimys.depend  Projet-Pokemon-Regimys.layout  (+23 more)
.github/: ISSUE_TEMPLATE.txt
.github/workflows/: ccpp.yml  check_code.yml  release_build.yml
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Resources/: LICENSE  README.md
Resources/Backgrounds/: backgroundControls.xcf  backgroundCredits.xcf  backgroundNameQuest.kra  backgroundOPMonChoice.xcf  backgroundOptions.xcf  titlescreen.xcf
Resources/Bases/: .backgroundNameQuest.png-autosave.kra  backgroundCredits.xcf  backgroundLanguage.xcf  backgroundOptions.xcf  loading.xcf  titlescreen.psd  titlescreen.xcf
Resources/Battle/: Battle preview cave.xcf  Battle preview grass.xcf  Fight preview grass.xcf  Fight preview.xcf
Resources/Definitive maps/: bedroom.xcf
Resources/Geography/: .~lock.Description des villes.odt#  Description des villes.odt  Regimys map with names and roads.xcf
Resources/History/: Description des villes.odt  Euville.odt  Fauxbourg Euvi.odt  Foret dEuvi.odt  Idées pour le jeu.odt  Pont EuviMys.odt  Regimys map GIMP.xcf  Regimys mapAVEC LES NOMSv0.2.xcf  SCRIPT EVENT 1 OPMON.odt  Scenario OPMon Lazuli.odt
Resources/History and Ideas/: SCRIPT EVENT 1 OPMON.odt  Scenario OPMon Lazuli.odt
Resources/Map projects/: euvicity.tmx  euviforest.tmx  fe.tmx  momroom.tmx  opcenter.tmx  pphome.tmx  pproom.tmx  proflab.tmx  proflabo.tmx  rivalhome.tmx  route1.tmx  route14.tmx  tileset.tsx
Resources/Music/: LICENSE  README.md  SavageFight_2.mmpz  SavageFight_2.mmpz.bak  grotte-01.mmpz.bak  mystic-01.mmpz  mystic-02.mmpz  trialfight.mmpz
Resources/Musics/: Faubourgeuvi.mmpz  README.md  route14.mmpz  route14.mmpz.bak
Resources/OpMon's stats/: Fiche OpMon  57-  Boxali.odt  Fiche OpMon 19-Ornitaupe.odt  Fiche OpMon 20 -Ornitank.odt  Fiche OpMon 36-Fatoro.odt  Fiche type OpMons.odt
Resources/OpMons' files/: Fiche  OpMon 28-Oursibraise.odt  Fiche  OpMon 29-Calcinours.odt  Fiche  OpMon 29-Oursifournaise.odt  Fiche OpMon  27-Oursiflamme.odt  Fiche OpMon 100 - Magmortis.odt  Fiche OpMon 19-Ornitaupe.odt  Fiche OpMon 20 -Ornitank.odt  Fiche type OpMons.odt
Resources/OpMons' stats/: Fiche  OpMon 29-Calcinours.odt  Fiche OpMon  57-  Boxali.odt  Fiche OpMon 10-Verpomme.odt  Fiche OpMon 19-Ornitaupe.odt  Fiche OpMon 25-Gouachtiti.odt  Fiche OpMon 35-Chibiro.odt
cmake/: LICENSE.txt  analysis.cmake  compiler_options.cmake  compiler_warnings.cmake  dependencies.cmake  globals.cmake  sanitize.cmake
data/: OPMon.desktop  README
data/data/: OpMon0.opmn  OpMon10.opmn  OpMon11.opmn  OpMon12.opmn  OpMon13  OpMon14..opmn  OpMon15.opmn  OpMon16.opmn  OpMon17.opmn  OpMon18.opmn  OpMon19.opmn  OpMon2.opmn  OpMon20.opmn  OpMon21.opmn  OpMon25.opmn  OpMon26.opmn  OpMon27.opmn  OpMon3.opmn  OpMon30.opmn  OpMon31  OpMon33.opmn  OpMon34.opmn  OpMon35.opmn  OpMon36.opmn  OpMon37.opmn  OpMon4.opmn  OpMon43.opmn  OpMon44  OpMon46.opmn  OpMon5.opmn  OpMon50.opmn  OpMon6.opmn  OpMon7.opmn  OpMon8.opmn  OpMon9.opmn  attacks.json  items.json  maps.json  opmn1.opmn  opmon.json  (+1 more)
data/keys/: deutsch.rkeys  deutsch.rkeys.orig  english.rkeys  espanol.rkeys  francais.rkeys  italian.rkeys
data/maps/: tileset.tsx
doc/: Doxyfile  SFML.tag  linkdocsfml.sh
exe/: OpMon  OpMon-Debug  feTemp.tmp  save.osave
exe/logs/: errLog.txt  log.txt
exeLinux/: Dependances.txt  Install.sh  OPMon.desktop  README.txt  libSDL2_ttf-2.0.so.0.14.0  opmon  opmon.sh  optSave.oparams  resources  ressources
exeLinux/logs/: log.txt
icons/: opmon_icon.icns
installer/: script.iss
installers/Debian/: compileBin.sh
installers/Windows/: script.iss
installers/arch/: PKGBUILD
installers/debian/: compileBoth.sh  compileSource.sh
installers/rpm/: opmon.spec
installers/windows/: script.iss
newSrc/utils/: OpString.cpp  StringKeys.cpp  StringKeys.hpp  Utils.cpp  Utils.hpp
onlinedata/: version.txt
pages/: downloads.html  last.html  source.html
pages/doc/: index.html
resources/: OPMon.desktop
resources/keys/: english.rkeys
scripts/: format-code.sh
sfml modifiés/: README.md
sfml modifiés/Audio/: SoundBuffer.hpp
sfml modifiés/Graphics/: Texture.hpp
src/: .project  AGameScreen.hpp  ATranslatable.cpp  ATranslatable.hpp  AbstractEvent.cpp  AbstractEvent.hpp  AbstractMetaEvent.cpp  AbstractMetaEvent.hpp  AnimationCtrl.cpp  AnimationCtrl.hpp  AnimationEvent.cpp  Animations.cpp  Animations.hpp  Battle.cpp  Battle.hpp  BattleCtrl.cpp  BattleCtrl.hpp  BattleData.cpp  BattleData.hpp  BattleEvent.cpp  BattleEvent.hpp  CharacterEvent.cpp  CurveExp.cpp  CurveExp.hpp  CycleCounter.hpp  Dialog.cpp  Dialog.hpp  DialogEvent.cpp  DialogEvent.hpp  EItem.cpp  ELevel.cpp  Elements.cpp  Elements.hpp  Enums.cpp  Enums.hpp  GameData.cpp  GameData.hpp  GameMenu.cpp  GameMenu.hpp  GameMenuCtrl.cpp  (+87 more)
src/nlohmann/: LICENSE  json.hpp
src/utils/: Comparaisons.hpp  CycleCounter.hpp  File.hpp  KeyData.cpp  KeyData.hpp  Keyboard.cpp  Keyboard.hpp  NumberedArray.cpp  NumberedArray.hpp  OpString.cpp  OpString.hpp  OptionsSave.cpp  OptionsSave.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourcePath.hpp  ResourcePath.mm  StringKeys.cpp  StringKeys.hpp  Utils.cpp  Utils.hpp  centerOrigin.hpp  defines.hpp  exceptions.cpp  exceptions.hpp  fs.cpp  fs.hpp  log.cpp  log.hpp  misc.cpp  misc.hpp  path.cpp  path.hpp  readme.md  time.cpp  time.hpp  utilsInclude.hxx
srcCpp/jlppc/: includeAll.hxx
stylesheets/: stylesheet.css
(+1156 files in other folders)
